--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" href="#shoes">Shoes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
+                  <a class="nav-link" href="#bagpack">Bagpack</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="#" tabindex="-1" >Contact</a>
+                  <a class="nav-link" href="#subscribe" tabindex="-1" >Subscribe</a>
                 </li>
               </ul>
             </div>
@@ -91,8 +91,112 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+          <div class="container categories justify-content-between">
+              <div class="row ">
+                  <div class="col-md-4"> 
+                  <div class="cat1 d-flex justify-content-between align-items-center">
+                      <h1>Watch</h1>
+                    <img src="images/categories/watch.png" alt=""></div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="cat2 d-flex justify-content-between align-items-center">
+                        <h1>Bag</h1>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                  <div class="cat3 d-flex justify-content-between align-items-center">
+                    <h1>Shoes</h1>
+                    <img src="images/categories/shoes.png" alt="">
+                  </div>
+
+                </div>
+              </div>
+          </div>
 
     </section>
+    <section class="container" id="shoes">
+        <h3>Shoes</h3>
+        <div class="card-deck">
+            <div class="card">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Supply Sports</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing Lorem ipsum dolor sit amet.></p>
+                <h5>$260</h5>
+                <button class="buy-now">Buy Now >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Sports 360</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing Lorem ipsum dolor sit amet. </p>
+                <h5>$530</h5>
+                <button class="buy-now">Buy Now >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nike</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing Lorem ipsum dolor sit amet. </p>
+                <h5>$350</h5>
+                <button class="buy-now">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+    </section>
+    <section class="container" id="bagpack">
+        <h3>Bagpack</h3>
+        <div class="card-deck">
+            <div class="card">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Stylish </h5>
+                <h5>$450</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now">Buy Now >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Sports Bag</h5>
+                <h5>$370</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now">Buy Now >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Hiking Bagpack</h5>
+                <h5>$240</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+
+    </section>
+    <section class="container  color-bg d-flex justify-content-center align-items-center" id="subscribe">
+    <div>
+        <h4>LET'S STAY IN TOUCH</h4>
+        <p class="last">Get update on sales,special and more</p>
+        <input class="form-control" type="email" placeholder="email here">
+        <button class="buy-now">Submit</button>
+    </div>
+    </section>
+    <footer>
+        <small>©️2020.Aziz881,All Right Reserved</small>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
